deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wbms-backend
spec:
  replicas: 1  # Adjust the number of replicas as needed
  selector:
    matchLabels:
      app: wbms-backend
  template:
    metadata:
      labels:
        app: wbms-backend
    spec:
      containers:
        - name: wbms-backend
          image: almyra/wbms_tbe:latest
          ports:
            - containerPort: 6001
          volumeMounts:
            - name: upload-volume
              mountPath: /wbms_be/upload
      volumes:
        - name: upload-volume
          hostPath:
            path: /path/to/host/upload  # Replace with the actual host path

---

apiVersion: v1
kind: Service
metadata:
  name: wbms-backend-service
spec:
  selector:
    app: wbms-backend
  ports:
    - protocol: TCP
      port: 6001
      targetPort: 6001
  type: NodePort  # Adjust the service type as needed

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-internal-communication
spec:
  podSelector:
    matchLabels:
      app: wbms-backend
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: wbms-db
